# pumpia-uniform-phantom

./: .gitignore  README.md  dicoms.nuitka-package.config.yml  pyproject.toml  requirements.txt  run_uniform_rpt_collection.py
.github/workflows/: publish.yml
Testing/: run_collection.py  uniform_rpt.py
pumpia_uniform_phantom/: collection.py
pumpia_uniform_phantom/modules/: sub_snr.py  uniformity.py
pumpia_uniform_phantom/repeat/: collection.py
pumpia_uniform_phantom/scripts/: run_uniform_rpt.py
